# bliply

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  create.sh  docker-compose.yml  main.py  pyproject.toml
api/v1/: optimizer_routes.py
config/: __init__.py  compute_units.py  config.py  config_data.yaml.prod  config_data.yaml.test  providers.json
core/: config.py  quota_manager.py  rate_limiter.py  router.py
data/: metrics.py  providers.py  usage_counters.json
data/schemas/: rpc.py  rpc_request.py
infra/: __init__.py  http_client.py  rpc_client.py
metrics/: __init__.py  store.py
providers/: base.py  registry.py
scoring/: __init__.py  cache.py  engine.py  utils.py
services/: eligibility_filter.py  metric_collector.py  request_parser.py  response_handler.py
strategy/: critic_weights.py  normalizer.py  optimizer.py  scoring_engine.py  selector.py
test_data/: lifecycle_usage.json  test_cu_usage.json  test_exploration.json  test_exploration2.json  test_usage.json
tests/integration/: test_comprehensive.py  test_concurrent_stress.py  test_exploration.py  test_full_lifecycle.py  test_load_100.py  test_logic_change.py  test_mixed_workload.py  test_scenario_2.py  test_scenario_3.py  test_spillover.py
tests/unit/: test_score_cache.py
