[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "bliply"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "aiohttp>=3.10.0",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
include = [
    "api*",
    "core*",
    "services*",
    "strategy*",
    "infra*",
    "config*",
    "metrics*",
    "providers*",
]
exclude = ["test_data*"]
